WIP: start of delete selection